Ajustes para el collab

--- a/notebooks/04_baseline_transformers.ipynb
+++ b/notebooks/04_baseline_transformers.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf968e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==========================================\n",
+    "# SETUP COLAB (Carga desde Drive)\n",
+    "# ==========================================\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "    print(\"🚀 En Colab: Montando Drive...\")\n",
+    "    \n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    \n",
+    "    # --- CONFIGURACIÓN ---\n",
+    "    # Ruta a tu carpeta en Drive\n",
+    "    DRIVE_BASE = \"/content/drive/MyDrive/Tesis_Paraguay\"\n",
+    "    # ---------------------\n",
+    "    \n",
+    "    # Instalar librerías\n",
+    "    !pip install -q transformers datasets accelerate scikit-learn seaborn matplotlib unidecode\n",
+    "    \n",
+    "    # Preparar entorno local en Colab\n",
+    "    !mkdir -p data/splits\n",
+    "    !mkdir -p notebooks\n",
+    "    \n",
+    "    # Copiar datos y utils desde Drive al entorno local de Colab (más rápido que leer de Drive)\n",
+    "    print(\"⏳ Copiando archivos...\")\n",
+    "    !cp -r \"$DRIVE_BASE/data/splits/\"* data/splits/\n",
+    "    !cp \"$DRIVE_BASE/notebooks/utils_shared.py\" notebooks/\n",
+    "    \n",
+    "    # Agregar carpeta notebooks al path para poder importar utils_shared\n",
+    "    sys.path.append('/content/notebooks')\n",
+    "    \n",
+    "    print(\"✅ Setup listo. Archivos copiados.\")\n",
+    "\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
+    "    print(\"💻 En Local: Setup omitido.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7b1af325",
    "metadata": {},
@@ -516,6 +564,24 @@
     "out_path = DATA_PATH / 'beto_cv_results.csv'\n",
     "df_cv.to_csv(out_path, index=False)\n",
     "print(f\"✓ Exportado: {out_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "627967db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'IN_COLAB' in locals() and IN_COLAB:\n",
+    "    print(\"⏳ Guardando resultados en Drive...\")\n",
+    "    # Asegurar que la carpeta de destino exista\n",
+    "    !mkdir -p \"$DRIVE_BASE/data\"\n",
+    "    \n",
+    "    # Copiar resultados\n",
+    "    !cp data/*.csv \"$DRIVE_BASE/data/\"\n",
+    "    \n",
+    "    print(\"✅ Resultados guardados en: \", DRIVE_BASE + \"/data/\")"
    ]
   }
  ],
