Ajustes para correr, completar y comparar resultados de los baseline

--- a/notebooks/04_baseline_tfidf.ipynb
+++ b/notebooks/04_baseline_tfidf.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "2afe241b",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "56fb4499",
    "metadata": {
     "execution": {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "train_code",
    "metadata": {
     "execution": {
@@ -215,6 +215,7 @@
     "    'f1_macro': metrics['f1_macro'],\n",
     "    'precision_macro': metrics['precision_macro'],\n",
     "    'recall_macro': metrics['recall_macro'],\n",
+    "    'accuracy': metrics['accuracy'],\n",
     "    'n_train': len(X_train),\n",
     "    'n_dev': len(X_dev)\n",
     "}])\n",
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "4ce8d3d6",
    "metadata": {},
    "outputs": [
