--- a/notebooks/04_baseline_dummy.ipynb
+++ b/notebooks/04_baseline_dummy.ipynb
@@ -86,13 +86,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset base: 3131 casos\n",
-      "Train: 1867 casos\n",
-      "Dev: 627 casos\n",
+      "Train (Denoised): 993 casos\n",
+      "Dev (Full): 627 casos\n",
       "\n",
       "Distribución train:\n",
-      "depresion    1388\n",
-      "ansiedad      479\n",
+      "depresion    708\n",
+      "ansiedad     285\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Distribución dev:\n",
@@ -205,6 +204,7 @@
     "    'f1_macro': metrics_majority['f1_macro'],\n",
     "    'precision_macro': metrics_majority['precision_macro'],\n",
     "    'recall_macro': metrics_majority['recall_macro'],\n",
+    "    'accuracy': metrics_majority['accuracy'],\n",
     "    'n_dev': len(y_dev)\n",
     "}])\n",
     "eval_majority.to_csv(DATA_PATH / 'dummy_majority_eval.csv', index=False)\n",
@@ -241,18 +241,18 @@
       "============================================================\n",
       "DUMMY BASELINE: STRATIFIED RANDOM\n",
       "============================================================\n",
-      "Macro F1: 0.4764\n",
-      "Macro Precision: 0.4945\n",
-      "Macro Recall: 0.4956\n",
+      "Macro F1: 0.4878\n",
+      "Macro Precision: 0.5028\n",
+      "Macro Recall: 0.5023\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    ansiedad       0.45      0.26      0.33       285\n",
-      "   depresion       0.54      0.73      0.62       342\n",
+      "    ansiedad       0.46      0.29      0.36       285\n",
+      "   depresion       0.55      0.71      0.62       342\n",
       "\n",
       "    accuracy                           0.52       627\n",
-      "   macro avg       0.49      0.50      0.48       627\n",
-      "weighted avg       0.50      0.52      0.49       627\n",
+      "   macro avg       0.50      0.50      0.49       627\n",
+      "weighted avg       0.51      0.52      0.50       627\n",
       "\n",
       "✓ Exportado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/dummy_stratified_eval.csv\n"
      ]
@@ -284,6 +284,7 @@
     "    'f1_macro': metrics_stratified['f1_macro'],\n",
     "    'precision_macro': metrics_stratified['precision_macro'],\n",
     "    'recall_macro': metrics_stratified['recall_macro'],\n",
+    "    'accuracy': metrics_stratified['accuracy'],\n",
     "    'n_dev': len(y_dev)\n",
     "}])\n",
     "eval_stratified.to_csv(DATA_PATH / 'dummy_stratified_eval.csv', index=False)\n",
@@ -311,17 +312,17 @@
      "output_type": "stream",
      "text": [
       "Iniciando Cross-Validation (Dummy Stratified)...\n",
-      "Fold 1: F1=0.4632\n",
-      "Fold 2: F1=0.5085\n",
-      "Fold 3: F1=0.5131\n",
-      "Fold 4: F1=0.4461\n",
-      "Fold 5: F1=0.4760\n",
+      "Fold 1: F1=0.4788\n",
+      "Fold 2: F1=0.4685\n",
+      "Fold 3: F1=0.5054\n",
+      "Fold 4: F1=0.4965\n",
+      "Fold 5: F1=0.4871\n",
       "\n",
       "Promedio CV:\n",
       "fold               3.000000\n",
-      "f1_macro           0.481367\n",
-      "precision_macro    0.492582\n",
-      "recall_macro       0.491253\n",
+      "f1_macro           0.487261\n",
+      "precision_macro    0.499577\n",
+      "recall_macro       0.499943\n",
       "dtype: float64\n",
       "✓ Exportado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/dummy_cv_results.csv\n"
      ]
